# svg3d

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  1AI0.mtl  README.md  README.rst  changelog.md  example.py  pyproject.toml  svg3d.py  test.ipynb  test_shading.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  requirements3.10.txt  requirements3.11.txt  requirements3.12.txt  requirements3.13.txt  requirements3.9.txt  update-pipfiles.sh
.github/workflows/: documentation.yaml  linkcheck.yaml  pypi-test-and-publish.yaml  run-pytest.yaml  run-pytest.yml  test-doc-code.yaml
doc/: requirements.in  requirements.txt
doc/source/: conf.py  credits.rst  custom-shaders.rst  development.rst  index.rst  installation.rst  introduction.rst  module-io.rst  module-shaders.rst  module-svg3d.rst  module-view.rst  quickstart.rst  usage-example.rst
extras/: parent_folder.py
svg3d/: __init__.py  coxeter.py  example.py  io.py  shaders.py  svg3d.py  utils.py  view.py
tests/: conftest.py  test_utils.py  test_view.py
